--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,8 +45,7 @@ jobs:
           name: Install atlas
           command: |
               source activate ./atlasenv
-              python setup.py install
-              conda list
+              python -m pip install . --no-deps -vv
               atlas --help
               atlas --version
       - run:
