--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -49,15 +49,16 @@ jobs:
 
       - name: Install atlas
         run: |
-           conda activate atlasenv
+           source activate atlasenv
            conda list 
            python -m pip install . --no-deps -vv
       - name: Test atlas
         run: |
-          
+          source activate atlasenv
           atlas --help
           atlas --version
       - name: Import atlas
         run: |
+          source activate atlasenv
           python -c "from atlas import utils"
 
