--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -7,7 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 5
-
+    defaults:
+      run:
+        shell: bash -el {0} # use default shell
+        
     steps:
 
       - name: Checkout
@@ -35,8 +38,7 @@ jobs:
 
       - name: Install atlas
         run: |
-           conda activate atlasenv
-           conda list 
+           echo "You are using env '$CONDA_PREFIX'"
            python -m pip install . --no-deps -vv
       - name: Test atlas
         run: |
