UPDATE GIHUB WORKFLOW (#639)
* Update python-package-conda.yml

* Update python-package-conda.yml

* Update python-package-conda.yml

* Update python-package-conda.yml

* Update python-package-conda.yml

* Update python-package-conda.yml

* Update python-package-conda.yml

* Update python-package-conda.yml

* Update python-package-conda.yml

* use cache package

* Update python-package-conda.yml

* allow python 3.11

* use default shelll

* use default bash

--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -7,35 +7,45 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 5
+    defaults:
+      run:
+        shell: bash -el {0} # use default shell
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
-      with:
-        python-version: '3.10'
-    - name: Add conda to system path
-      run: |
-        # $CONDA is an environment variable pointing to the root of the miniconda directory
-        echo $CONDA/bin >> $GITHUB_PATH
-    - name: Install mamba
-      run: |
-        conda install -y mamba
-    - name: Install dependencies
-      run: |
-        mamba env update --file atlasenv.yml --name base
-        conda list
-    - name: Lint with flake8
-      run: |
-        mamba install flake8
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Install atlas
-      run: |
-        python setup.py install
-    - name: Test atlas
-      run: |
-        atlas --help
-        atlas --version
+
+      - name: Checkout
+        uses: actions/checkout@v3.5.2
+        
+      - name: Setup_conda_and_cache
+        uses: actions/cache@v2
+        env:
+          # Increase this value to reset cache if etc/example-environment.yml has not changed
+          CACHE_NUMBER: 0
+        with:
+          path: ~/conda_pkgs_dir
+          key:
+            ${{ runner.os }}-conda-${{ env.CACHE_NUMBER }}-${{
+            hashFiles('atlasenv.yml') }}
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          activate-environment: atlasenv
+          use-mamba: true
+          python-version: 3.11
+          mamba-version: "*"
+          channels: conda-forge,bioconda,defaults
+          environment-file: atlasenv.yml
+          use-only-tar-bz2: true # IMPORTANT: This needs to be set for caching to work properly!
+
+
+      - name: Install atlas
+        run: |
+           echo "You are using env '$CONDA_PREFIX'"
+           python -m pip install . --no-deps -vv
+      - name: Test atlas
+        run: |
+          atlas --help
+          atlas --version
+      - name: Import atlas
+        run: |
+          python -c "from atlas import utils"
+
