chmod of test_ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -151,7 +151,9 @@ jobs:
           name: run test
           command: |
             source activate ./atlasenv
-            
+            ls -l 
+            pwd 
+            chmod +x test/test_ci.sh
             test/test_ci.sh --resources mem=$MEM java_mem=$MEM --jobs=$N_THREADS --restart-times=2
       - store_artifacts:
           path: test_ci/logs
