--- a/workflow/envs/dram.yaml
+++ b/workflow/envs/dram.yaml
@@ -2,5 +2,7 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
+  - python = 3.11
   - dram >=1.4.6, <1.5
+  - scikit-bio >=0.5.8, <0.6
   - pandas >=1.5, <2
