--- a/workflow/envs/dram.yaml
+++ b/workflow/envs/dram.yaml
@@ -2,7 +2,8 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
-  - python >= 3.10
-  - dram >=1.4.6, <1.5
-  - scikit-bio >=0.5.8, <0.6
-  - pandas >=1.5, <2
+  - python = 3.10
+  - dram >= 1.4.6, <1.5
+  - scipy = 1.8.1
+  - scikit-bio = 0.5.7
+  - pandas >= 1.5, <2
