--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -228,6 +228,7 @@ include: "rules/download.smk"  # contains hard coded variables
 include: "rules/qc.smk"
 include: "rules/assemble.smk"
 include: "rules/binning.smk"
+include: "rules/derep.smk"
 include: "rules/genomes.smk"
 include: "rules/dram.smk"
 include: "rules/genecatalog.smk"
@@ -290,7 +291,7 @@ rule genecatalog:
         "Genecatalog/clustering/orf_info.parquet",
         get_gene_catalog_input(),
     output:
-        touch("finished_genecatalog"),
+        temp(touch("finished_genecatalog")),
 
 
 rule strains:
@@ -331,7 +332,7 @@ rule genomes:
         *get_genome_annotations(),
         "finished_binning",
     output:
-        touch("finished_genomes"),
+        temp(touch("finished_genomes")),
 
 
 rule quantify_genomes:
@@ -342,15 +343,15 @@ rule quantify_genomes:
 
 rule binning:
     input:
-        expand(
-            "{sample}/binning/{binner}/cluster_attribution.tsv",
-            binner=config["final_binner"],
-            sample=SAMPLES,
+        "Binning/{binner}/genome_similarities.parquet".format(
+            binner=config["final_binner"]
         ),
-        expand("Binning/{binner}/report.html", binner=config["final_binner"]),
+        "Binning/{binner}/bins2species.tsv".format(binner=config["final_binner"]),
+        "Binning/{binner}/bin_info.tsv".format(binner=config["final_binner"]),
+        expand("reports/bin_report_{binner}.html", binner=config["final_binner"]),
         "finished_assembly",
     output:
-        touch("finished_binning"),
+        temp(touch("finished_binning")),
 
 
 rule assembly_one_sample:
