--- a/workflow/envs/dram.yaml
+++ b/workflow/envs/dram.yaml
@@ -2,8 +2,5 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
-  - python = 3.10
-  - dram >= 1.4.6, <1.5
-  - scipy = 1.8.1
-  - scikit-bio = 0.5.7
-  - pandas >= 1.5, <2
+  - dram >= 1.4.6, <1.5 #Shold define all correct verrsions See https://github.com/bioconda/bioconda-recipes/pull/41518
+
