--- a/config/template_config.yaml
+++ b/config/template_config.yaml
@@ -188,7 +188,7 @@ gunc_database: "progenomes"  # 'progenomes' or 'gtdb'
 
 genome_dereplication:
   ANI: 0.95                     ## Genome dreplication threshold 0.95 is more or less species
-  overlap: 0.2                  # See more on https://drep.readthedocs.io/en/latest/module_descriptions.html
+  overlap: 0.2                  
 
 rename_mags_contigs: true        #Rename contigs of representative MAGs
 
