--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,7 @@ jobs:
       - run:
           name: Setup conda
           command: |
+            conda config --set channel_priority strict
             conda config --add channels bioconda
             conda config --add channels conda-forge
             conda config --set always_yes true
