ci: use micromamba (#682)
* ci: use micromamba

* use different mamba container

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 defaults: &defaults
   docker:
-    - image: continuumio/miniconda3
+    - image: condaforge/mambaforge
   environment:
     DATABASE_DIR: databases
 
@@ -25,7 +25,6 @@ jobs:
             conda config --add channels bioconda
             conda config --add channels conda-forge
             conda config --set always_yes true
-            conda install -y mamba
       - restore_cache:
           key: atlasenv-d-{{ checksum "atlasenv.yml" }}
       - run:
