default binner set to vamb

--- a/config/default_config.yaml
+++ b/config/default_config.yaml
@@ -28,3 +28,9 @@ semibin_train_extra: ""
 
 filter_chimieric_bins: true
 gunc_database: "progenomes"  # progenomes or gtdb
+
+
+binner:                           # If DASTool is used as final_binner, use predictions of this binners
+  - metabat
+  - maxbin
+#  - vamb
