--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -41,6 +41,7 @@ wildcard_constraints:
 
 include: "rules/sample_table.smk"
 include: "rules/download.smk"  # contains hard coded variables
+include: "rules/screen.smk"
 include: "rules/qc.smk"
 include: "rules/assemble.smk"
 include: "rules/binning.smk"
