--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -41,8 +41,8 @@ wildcard_constraints:
 
 include: "rules/sample_table.smk"
 include: "rules/download.smk"  # contains hard coded variables
-include: "rules/screen.smk"
 include: "rules/qc.smk"
+include: "rules/screen.smk" # expects function get_input_fastq defined in qc
 include: "rules/assemble.smk"
 include: "rules/binning.smk"
 include: "rules/derep.smk"
