add confiog options to semibin config

--- a/config/default_config.yaml
+++ b/config/default_config.yaml
@@ -22,7 +22,7 @@ genome_aligner: "minimap"
 
 bin_quality_asesser: checkm2          #[ checkm2, busco, cehckm]
 
-
+semibin_options: ""
 semibin_train_extra: ""
 
 
