--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,6 +60,12 @@ jobs:
               source activate ./atlasenv
               test/dryrun.sh
 
+      - run:
+          name: Test_init
+          command: |
+              source activate ./atlasenv
+              test/test_init.sh
+
       - persist_to_workspace:
           root: /root/project/
           paths:
